message(STATUS "now complie <lg> module")
add_library(lg lgModule.c)
include_directories(${PROJECT_SOURCE_DIR}/moduleTools)
include_directories(${PROJECT_SOURCE_DIR}/moduleComm)
include_directories(${PROJECT_SOURCE_DIR}/moduleLog)
include_directories(${PROJECT_SOURCE_DIR}/moduleLg)
include_directories(${PROJECT_SOURCE_DIR}/moduleErr)
include_directories(${PROJECT_SOURCE_DIR}/platform)
