message(STATUS "now complie <platform> module")
set(SRC_LIST main.c userapp.c)
add_executable(main ${SRC_LIST})
include_directories(${PROJECT_SOURCE_DIR}/toolsModule)
include_directories(${PROJECT_SOURCE_DIR}/commModule)
include_directories(${PROJECT_SOURCE_DIR}/logModule)
include_directories(${PROJECT_SOURCE_DIR}/lgModule)
include_directories(${PROJECT_SOURCE_DIR}/errModule)
include_directories(${PROJECT_SOURCE_DIR}/platform)
target_link_libraries(main comm log lg tools)
