message(STATUS "now process <platform> module ...")
set(SRC_LIST main.c userapp.c)
add_executable(main ${SRC_LIST})
include_directories(${PROJECT_SOURCE_DIR}/moduleTools)
include_directories(${PROJECT_SOURCE_DIR}/moduleComm)
include_directories(${PROJECT_SOURCE_DIR}/moduleLog)
include_directories(${PROJECT_SOURCE_DIR}/moduleLg)
include_directories(${PROJECT_SOURCE_DIR}/moduleErr)
include_directories(${PROJECT_SOURCE_DIR}/platform)
target_link_libraries(main comm log lg tools)
