message(STATUS "now process <platform> module ...")
set(SRC_LIST main.c)
aux_source_directory(${PROJECT_SOURCE_DIR}/moduleTools SRC_LIST)
aux_source_directory(${PROJECT_SOURCE_DIR}/moduleComm SRC_LIST)
aux_source_directory(${PROJECT_SOURCE_DIR}/moduleLog SRC_LIST)
aux_source_directory(${PROJECT_SOURCE_DIR}/moduleLg SRC_LIST)

if(dust2farm)
   message(STATUS "we will generate libdfc.a")
   add_library(dfc ${SRC_LIST})
else(dust2farm)
   message(STATUS "we will generate dfc")
   set(SRC_LIST ${SRC_LIST} userapp.c)
   add_executable(dfc ${SRC_LIST})
endif(dust2farm)

include_directories(${PROJECT_SOURCE_DIR}/moduleTools)
include_directories(${PROJECT_SOURCE_DIR}/moduleComm)
include_directories(${PROJECT_SOURCE_DIR}/moduleLog)
include_directories(${PROJECT_SOURCE_DIR}/moduleLg)
include_directories(${PROJECT_SOURCE_DIR}/moduleErr)
include_directories(${PROJECT_SOURCE_DIR}/platform)

if(debug_mode)
   add_definitions(-DDEBUG)
endif(debug_mode)
add_definitions(-g)
add_definitions(-DTCP_SERVER_MODE)
add_definitions(-DTCP_CLIENT_MODE)
add_definitions(-DUDP_MODE)
add_definitions(-DLOG)


